deploy/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallfacerd
  namespace: latere
  labels:
    app: wallfacerd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallfacerd
  template:
    metadata:
      labels:
        app: wallfacerd
    spec:
      containers:
        - name: wallfacerd
          image: ghcr.io/changkun/wallfacerd:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
