deploy/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallfacerd
  namespace: latere
spec:
  selector:
    app: wallfacerd
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
