deploy/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallfacerd
  namespace: latere
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wf.latere.ai
      secretName: wallfacerd-tls
  rules:
    - host: wf.latere.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallfacerd
                port:
                  number: 80
